--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="app_name">Simple ToDo</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_edit_item">Edit Item</string>
+    <string name="title_activity_edit_item">Add / Edit Item</string>
+    <string name="new_item">Enter Here</string>
 
 </resources>
